tests/negative/unwrap_none.sans
main() {
  x = none
  v = x!
  p(itos(v))
}
